--- a/FirebaseEx2/app/src/main/res/layout/fragment_home.xml
+++ b/FirebaseEx2/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,14 @@
     android:id="@+id/home_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -10,13 +18,13 @@
         android:text="Large Text"
         android:id="@+id/textView"
         android:gravity="center"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_below="@+id/toolbar"
+        android:layout_above="@+id/listView" />
     <ListView
         android:id="@+id/listView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/toolbar"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
