--- a/FirebaseEx2/app/src/main/res/layout/list_row.xml
+++ b/FirebaseEx2/app/src/main/res/layout/list_row.xml
@@ -17,11 +17,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight=".4"
-        android:src="@drawable/ic_launcher_foreground" />
+        android:src="@drawable/ic_done" />
     <ImageView
         android:id="@+id/imageView_delete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight=".4"
-        android:src="@drawable/ic_launcher_foreground" />
+        android:src="@drawable/ic_delete" />
 </LinearLayout>
